--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -8,12 +8,12 @@ import Header from "../components/Header.astro";
 
 type Props = CollectionEntry<"weekly">["data"];
 
-const { title, description, pubDate, updatedDate } = Astro.props;
+const { title, description, date } = Astro.props;
 ---
 
 <html lang="en">
   <head>
-    <BaseHead title={title} description={description} />
+    <BaseHead title={title} description={description ?? ""} />
     <style>
       main {
         width: calc(100% - 2em);
@@ -62,14 +62,7 @@ const { title, description, pubDate, updatedDate } = Astro.props;
         <div class="prose">
           <div class="title">
             <div class="date">
-              <FormattedDate date={pubDate} />
-              {
-                updatedDate && (
-                  <div class="last-updated-on">
-                    Last updated on <FormattedDate date={updatedDate} />
-                  </div>
-                )
-              }
+              <FormattedDate date={date} />
             </div>
             <h1>{title}</h1>
             <hr />
