--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import BaseHead from "../components/BaseHead.astro";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
+import EntryList from "../components/EntryList.astro";
 ---
 
 <!doctype html>
@@ -12,7 +13,9 @@ import { SITE_DESCRIPTION, SITE_TITLE } from "../consts";
   </head>
   <body>
     <Header />
-    <main></main>
+    <main>
+      <EntryList />
+    </main>
     <Footer />
   </body>
 </html>
